ELS Code/main/default/objects/RawUnit__c/RawUnit__c.object-meta.xml
<CustomObject>
    <label>RawUnit</label>
    <nameField>
        <label>RawUnit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RawUnits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>