ELS Code/main/default/objects/RawUnit__c/fields/Is_Rental__c.field-meta.xml
<CustomField>
    <fullName>Is_Rental__c</fullName>
    <label>Is Rental?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>