ELS Code/main/default/objects/RawUnit__c/fields/Max_Length__c.field-meta.xml
<CustomField>
    <fullName>Max_Length__c</fullName>
    <label>Max Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>