ELS Code/main/default/objects/RawUnit__c/fields/Robot_ID__c.field-meta.xml
<CustomField>
    <fullName>Robot_ID__c</fullName>
    <label>Robot ID</label>
    <length>225</length>
    <type>Text</type>
</CustomField>